# server/openapi.json
@@ -394,14 +394,10 @@
       "ProfileReq": {
         "type": "object",
         "required": [
-          "display_name",
-          "public_key"
+          "display_name"
         ],
         "properties": {
           "display_name": {
-            "type": "string"
-          },
-          "public_key": {
             "type": "string"
           }
         }
@@ -410,9 +406,6 @@
         "type": "object",
         "properties": {
           "user_id": {
-            "type": "string"
-          },
-          "public_key": {
             "type": "string"
           }
         }
